Add opens for Java 17